Aplicação do frontend